--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
            src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGKdsL4qh4&#x2F;oYrMRuZ3NCw0p5A7YXroPg&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
          </iframe>
        </div>
-       <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGKdsL4qh4&#x2F;oYrMRuZ3NCw0p5A7YXroPg&#x2F;view?utm_content=DAGKdsL4qh4&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Saqib Rashid</a> by Hadi Raza
+       <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGKdsL4qh4&#x2F;oYrMRuZ3NCw0p5A7YXroPg&#x2F;view?utm_content=DAGKdsL4qh4&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Saqib Rashid's Paintings </a>Designed by Hadi Raza
     </div>
 
     <!-- Add more sections as needed -->
